@@ -49,7 +49,6 @@ import jdk.internal.org.commonmark.renderer.text.TextContentNodeRendererContext;
 import jdk.internal.org.commonmark.renderer.text.TextContentNodeRendererFactory;
 import jdk.internal.org.commonmark.renderer.text.TextContentRenderer;
 
-import java.util.Collections;
 import java.util.Set;
 
 /**
@@ -110,7 +109,7 @@ public class TablesExtension implements Parser.ParserExtension, HtmlRenderer.Htm
 
             @Override
             public Set<Character> getSpecialCharacters() {
-                return Collections.singleton('|');
+                return Set.of('|');
             }
         });
     }
